# calculator

./: CHANGELOG.md  LICENSE  README.md  rechner.cabal
app/: Main.hs
lib/: Calc.hs  Expr.hs  RPN.hs  ShuntingYard.hs  Token.hs  Unit.hs
lib/Calc/: Ast.hs  Calculator.hs  Error.hs  Function.hs  RPN.hs  ShuntingYard.hs  Token.hs  Types.hs  Unit.hs  UnitCreation.hs  Value.hs
lib/GCI/: Calculator.hs  Parser.hs  Test.hs
lib/GCI/Calc/: Decl.hs  Expr.hs  Extension.hs  Lit.hs
lib/GCI/Core/: Expr.hs
lib/GCI/Parser/: Decl.hs  Expr.hs  Lexer.hs
lib/GCI/Renamer/: Decl.hs  Expr.hs  Lit.hs  Types.hs
lib/GCI/Typechecker/: Decl.hs  Expr.hs  Lit.hs
lib/GCI/Types/: Names.hs  SrcLoc.hs  Unit.hs  UnitCreation.hs  Value.hs
lib/Language/Calc/Syntax/: Decl.hs  Expr.hs  Extension.hs  Lit.hs
test/: CalcTest.hs  Utils.hs
