cabal-version:      2.4
name:               rechner
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Elias Gerster
maintainer:         elias.gerster@outlook.de

-- A copyright notice.
-- copyright:
category:           Math
extra-source-files: CHANGELOG.md

library
    exposed-modules: 
        Token

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        parsec >= 3.1.17.0
    hs-source-dirs:   lib
    default-language: Haskell2010

executable rechner
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        parsec >= 3.1.17.0,
        rechner

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite rechner-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
