cabal-version:      2.4
name:               rechner
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Elias Gerster
maintainer:         elias.gerster@outlook.de

-- A copyright notice.
-- copyright:
category:           Math
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Calc,
        Calc.Token,
        Calc.ShuntingYard,
        Calc.RPN,
        Calc.Unit,
        Calc.Value,
        Calc.Error,
        Calc.UnitCreation,
        Calc.Calculator

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >= 4.16.4.0,
        parsec >= 3.1.17.0,
        transformers >= 0.6.1.1,
        lens >= 5.2,
        template-haskell >= 2.18,
        containers >= 0.6
    hs-source-dirs:   lib
    default-language: Haskell2010

executable rechner
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.16.4.0,
        parsec >= 3.1.17.0,
        transformers >= 0.6.1.1,
        rechner

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite rechner-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          CalcTest.hs
    build-depends:
        base >=4.16.4.0,
        tasty >= 1.5,
        tasty-quickcheck >= 0.10.3,
        QuickCheck >= 2.15,
        template-haskell >= 2.18,
        parsec >= 3.1.17.0,
        lens >= 5.2,
        rechner
    other-modules:
        Utils